--- a/themes/test.html
+++ b/themes/test.html
@@ -13,114 +13,115 @@
   }
 </style>
 <link rel="stylesheet" href="./default-light.css" />
+
 <body>
   <table>
     <tr>
-      <th>ENAME</th>
-      <th>SAL</th>
-      <th>total salary</th>
-      <th>new salary</th>
-      <th>bonus</th>
-      </tr>
-
+      <th>EMPLOYEE NAME</th>
+      <th>Orignal Salary</th>
+      <th>Total Salary</th>
+      <th>New Salary</th>
+      <th>Bonus</th>
+    </tr>
     <tr>
       <td>SMITH</td>
       <td>800</td>
       <td class="meta-val">(NULL)</td>
       <td>1000</td>
       <td>200</td>
-      </tr>
+    </tr>
     <tr>
       <td>ALLEN</td>
       <td>1600</td>
       <td>1900</td>
       <td>2000</td>
       <td>400</td>
-      </tr>
+    </tr>
     <tr>
       <td>WARD</td>
       <td>1250</td>
       <td>1750</td>
       <td>1562.5</td>
       <td>312.5</td>
-      </tr>
+    </tr>
     <tr>
       <td>JONES</td>
       <td>2975</td>
       <td class="meta-val">(NULL)</td>
       <td>3718.75</td>
       <td>743.75</td>
-      </tr>
+    </tr>
     <tr>
       <td>MARTIN</td>
       <td>1250</td>
       <td>2650</td>
       <td>1562.5</td>
       <td>312.5</td>
-      </tr>
+    </tr>
     <tr>
       <td>BLAKE</td>
       <td>2850</td>
       <td class="meta-val">(NULL)</td>
       <td>3562.5</td>
       <td>712.5</td>
-      </tr>
+    </tr>
     <tr>
       <td>CLARK</td>
       <td>2450</td>
       <td class="meta-val">(NULL)</td>
       <td>3062.5</td>
       <td>612.5</td>
-      </tr>
+    </tr>
     <tr>
       <td>SCOTT</td>
       <td>3000</td>
       <td class="meta-val">(NULL)</td>
       <td>3750</td>
       <td>750</td>
-      </tr>
+    </tr>
     <tr>
       <td>KING</td>
       <td>5000</td>
       <td class="meta-val">(NULL)</td>
       <td>6250</td>
       <td>1250</td>
-      </tr>
+    </tr>
     <tr>
       <td>TURNER</td>
       <td>1500</td>
       <td>1500</td>
       <td>1875</td>
       <td>375</td>
-      </tr>
+    </tr>
     <tr>
       <td>ADAMS</td>
       <td>1100</td>
       <td class="meta-val">(NULL)</td>
       <td>1375</td>
       <td>275</td>
-      </tr>
+    </tr>
     <tr>
       <td>JAMES</td>
       <td>950</td>
       <td class="meta-val">(NULL)</td>
       <td>1187.5</td>
       <td>237.5</td>
-      </tr>
+    </tr>
     <tr>
       <td>FORD</td>
       <td>3000</td>
       <td class="meta-val">(NULL)</td>
       <td>3750</td>
       <td>750</td>
-      </tr>
+    </tr>
     <tr>
       <td>MILLER</td>
       <td>1300</td>
       <td class="meta-val">(NULL)</td>
       <td>1625</td>
       <td>325</td>
-      </tr>
-    </table>
-  </body>
+    </tr>
+  </table>
+</body>
+
 </html>
