--- a/themes/test.html
+++ b/themes/test.html
@@ -12,7 +12,7 @@
     max-width: none;
   }
 </style>
-<link rel="stylesheet" href="./default-light.css" />
+<link rel="stylesheet" href="./default-dark.css" />
 
 <body>
   <table>
