--- a/themes/test.html
+++ b/themes/test.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <link rel="stylesheet" href="./default-light.css" />
 </head>
-
 <body>
+
   <pre><code id="code" class="language-sql">SELECT
   ename,
   sal,
@@ -123,14 +122,13 @@ FROM
       <td>325</td>
     </tr>
   </table>
+  
   <script type="module">
-    import hljs from 'https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/es/highlight.min.js';
-    import sql from 'https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/es/languages/sql.min.js';
+    import hljs from './_internal/highlight.min.js';
+    import sql from './_internal/sql.min.js';
+
     hljs.registerLanguage('sql', sql);
-
     hljs.highlightAll();
-
   </script>
 </body>
-
 </html>
