--- a/themes/test.html
+++ b/themes/test.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <link rel="stylesheet" href="./default-light.css" />
 </head>
+
 <body>
 
   <pre><code id="code" class="language-sql">SELECT
@@ -122,13 +124,13 @@ FROM
       <td>325</td>
     </tr>
   </table>
-  
-  <script type="module">
-    import hljs from './_internal/highlight.min.js';
-    import sql from './_internal/sql.min.js';
 
-    hljs.registerLanguage('sql', sql);
+  <script src="_internal/highlight.min.js"></script>
+  <script src="_internal/languages/sql.min.js"></script>
+
+  <script type="module">
     hljs.highlightAll();
   </script>
 </body>
+
 </html>
